@@ -82,6 +82,7 @@
     * stop macro playback on <C-c>
     * :bmark now updates a bookmark, if possible. :bmark! adds a new one
     * many bug fixes
+    * :dialog and :sidebar now doesn't care about case for arguments
 
 2008-08-16:
     * version 1.2
